--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,7 @@ Cargo.lock
 *.pdb
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
@@ -83,5 +84,44 @@ Cargo.lock
 # Ignore all local history of files
 .history
 .ionide
+
+### C ###
+# Prerequisites
+*.d
+
+# Object files
+*.o
+*.ko
+*.obj
+*.elf
+
+# Linker output
+*.ilk
+*.map
+*.exp
+
+# Precompiled Headers
+*.gch
+*.pch
+
+# Libraries
+*.lib
+*.a
+*.la
+*.lo
+
+# Shared objects (inc. Windows DLLs)
+*.dll
+*.so
+*.so.*
+*.dylib
+
+# Executables
+*.exe
+*.out
+*.app
+*.i*86
+*.x86_64
+*.hex
 
 # End of https://www.toptal.com/developers/gitignore/api/rust,visualstudiocode,linux,macos
