--- a/proxy-server/Cargo.toml
+++ b/proxy-server/Cargo.toml
@@ -1,12 +1,9 @@
 [package]
-name = "dns-filter"
+name = "proxy-server"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core_affinity = "0.5.10"
 clap = "2.32.0"
-regex = "1.5.4"
-net = { path = "../bindings/net" }
