--- a/nf/Cargo.toml
+++ b/nf/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "dns-filter"
+name = "nf"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core_affinity = "0.5.10"
+core_affinity = "0.8.1"
 clap = "2.32.0"
 regex = "1.5.4"
 net = { path = "../bindings/net" }
