--- a/load-generator/Cargo.toml
+++ b/load-generator/Cargo.toml
@@ -1,14 +1,8 @@
 [package]
-name = "nf"
+name = "load-generator"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pnet = "0.28.0"
-etherparse = "0.14"
-core_affinity = "0.8.1"
-clap = "2.32.0"
-regex = "1.5.4"
-net = { path = "../bindings/net" }
