--- a/load-generator/Cargo.toml
+++ b/load-generator/Cargo.toml
@@ -6,3 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+etherparse = "0.14"
+core_affinity = "0.8.1"
+clap = "2.32.0"
+rand = "0.7.3"
+rand_distr = "0.3.0"
+rand_mt = "3"
+mac_address = "1.1.2"
+trust-dns = "0.23.0"
+trust-dns-proto = "0.23.0"
+pnet = "0.28.0"
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
+net = { path = "../bindings/net" }
