update meson build

--- a/vxlan-dpa/dev/meson.build
+++ b/vxlan-dpa/dev/meson.build
@@ -21,13 +21,14 @@ sample_dev_target = custom_target('apps_' + dev_app_name,
 					    '--dpacc_build_dir', '@OUTDIR@',
 					    '--external_cc_options',
 					    ','.join(dpacc_devicecc_array),
-					    '--additional_include_directories',
-					    common_dev_include_dir,
-					    '--additional_ld_libs', common_dev_name,
-					    '--additional_lib_paths', common_dev_lib_path],
+                                            #'--additional_include_directories',
+                                            #common_dev_include_dir,
+                                            #'--additional_ld_libs', common_dev_name,
+                                            #'--additional_lib_paths', common_dev_lib_path
+                                  ],
 				  output: app_out_name,
 				  input: sample_dev_srcs,
-				  depends: [common_dev_target],
+                                  #depends: [common_dev_target],
 				  depend_files: shared_include_files)
 
 # Create dependency from DPA application for link with host side sample
