--- a/vxlan-dpa/meson.build
+++ b/vxlan-dpa/meson.build
@@ -8,10 +8,16 @@ inc_dirs = [
 	include_directories('.'),
 ]
 
+libverbs_dep = dependency('libibverbs', required: true)
+mlx5_dep = dependency('libmlx5', required: true)
+thread_dep = dependency('threads', required: true)
+flexio_dep = dependency('libflexio', required: true)
+
 libflexio_host = dependency('libflexio')
 
 add_project_arguments('-D DOCA_ALLOW_EXPERIMENTAL_API', language: ['c', 'cpp'])
 
 dev_app_name = 'vxlan'
+shared_include_files = [join_paths(meson.current_source_dir(),'vxlan_common.h')]
 subdir('dev')
 subdir('host')
