update meson build

--- a/vxlan-dpa/host/meson.build
+++ b/vxlan-dpa/host/meson.build
@@ -34,6 +34,6 @@ executable('vxlan',
 	['vxlan_host.c'],
 	c_args: '-DDEV_APP_NAME='+dev_app_name,
 	native: true,
-	dependencies: [ibverbs_dep, mlx5_dep, flexio_dep, common_host_dep, sample_device_dep],
+	dependencies: [ibverbs_dep, mlx5_dep, flexio_dep, sample_device_dep],
 	link_depends: sample_dev_target
 )
