--- a/vxlan-dpa/meson.build
+++ b/vxlan-dpa/meson.build
@@ -12,6 +12,7 @@ ibverbs_dep = dependency('libibverbs', required: true)
 mlx5_dep = dependency('libmlx5', required: true)
 thread_dep = dependency('threads', required: true)
 flexio_dep = dependency('libflexio', required: true)
+doca_dep = dependency('doca', required: true)
 
 add_project_arguments('-D DOCA_ALLOW_EXPERIMENTAL_API', language: ['c', 'cpp'])
 
