--- a/dpa/flow_monitor/meson.build
+++ b/dpa/flow_monitor/meson.build
@@ -1,4 +1,4 @@
-project('FLOW_MONITOR', 'C',
+project('VXLAN', 'C',
 	license: 'Proprietary',
 	default_options: ['buildtype=debug'],
 	meson_version: '>= 0.61.2'
@@ -17,7 +17,7 @@ doca_common_dep = dependency('doca-common', required: true)
 
 add_project_arguments('-D DOCA_ALLOW_EXPERIMENTAL_API', language: ['c', 'cpp'])
 
-dev_app_name = 'flow_monitor'
+dev_app_name = 'vxlan'
 shared_include_files = [join_paths(meson.current_source_dir(),'common.h')]
 subdir('dev')
 subdir('host')
