--- a/dpa/ddos-manual/meson.build
+++ b/dpa/ddos-manual/meson.build
@@ -14,6 +14,7 @@ thread_dep = dependency('threads', required: true)
 flexio_dep = dependency('libflexio', required: true)
 dpdk_dep = dependency('libdpdk', required: true)
 doca_common_dep = dependency('doca-common', required: true)
+doca_flow_dep = dependency('doca-flow', required: true)
 
 add_project_arguments('-D DOCA_ALLOW_EXPERIMENTAL_API', language: ['c', 'cpp'])
 
