--- a/dpa/ddos-manual/host/meson.build
+++ b/dpa/ddos-manual/host/meson.build
@@ -45,6 +45,6 @@ executable('ddos',
 	c_args: '-DDEV_APP_NAME='+dev_app_name,
 	native: true,
         include_directories: inc,
-	dependencies: [flexio_dep, ibverbs_dep, mlx5_dep, dpdk_dep, doca_common_dep, doca_flow_dep, sample_device_dep],
+	dependencies: [flexio_dep, ibverbs_dep, mlx5_dep, dpdk_dep, doca_common_dep, doca_flow_dep, doca_sha_dep, sample_device_dep],
 	link_depends: sample_dev_target
 )
